import { Component } from '@angular/core';

@Component({
  selector: 'app-ticket-type',
  imports: [],
  templateUrl: './ticket-type.html',
  styleUrl: './ticket-type.css'
})
export class TicketType {

}
